infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-depl
  labels:
    app: expiration-depl
spec:
  replicas: 1
  template:
    metadata:
      name: expiration
      labels:
        app: expiration
    spec:
      containers:
        - name: expiration
          image: sanchitb23/msc-ticketing-expiration
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  selector:
    matchLabels:
      app: expiration
