infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
  labels:
    app: auth-mongo-depl
spec:
  replicas: 1
  template:
    metadata:
      name: auth-mongo
      labels:
        app: auth-mongo
    spec:
      containers:
        - name: auth-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  selector:
    matchLabels:
      app: auth-mongo

---

apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv
spec:
  selector:
    app: auth-mongo
  ports:
    - port: 27017
      targetPort: 27017
      name: auth-db
      protocol: TCP
  type: ClusterIP
