infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
  labels:
    app: orders-depl
spec:
  replicas: 1
  template:
    metadata:
      name: orders
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: sanchitb23/msc-ticketing-orders
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  selector:
    matchLabels:
      app: orders
---
apiVersion: v1
kind: Service
metadata:
  name: orders-clusterip-srv
spec:
  selector:
    app: orders
  ports:
    - port: 3000
      targetPort: 3000
      name: orders
      protocol: TCP
