infra/k8s/orders-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-mongo-depl
  labels:
    app: orders-mongo-depl
spec:
  replicas: 1
  template:
    metadata:
      name: orders-mongo
      labels:
        app: orders-mongo
    spec:
      containers:
        - name: orders-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  selector:
    matchLabels:
      app: orders-mongo

---

apiVersion: v1
kind: Service
metadata:
  name: orders-mongo-srv
spec:
  selector:
    app: orders-mongo
  ports:
    - port: 27017
      targetPort: 27017
      name: orders-db
      protocol: TCP
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: orders-mongo-node-srv
spec:
  selector:
    app: orders-mongo
  ports:
    - port: 27017
      protocol: TCP
      name: orders-mongo-external
      targetPort: 27017
      nodePort: 30007
  type: NodePort
