infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
  labels:
    app: payments-depl
spec:
  replicas: 1
  template:
    metadata:
      name: payments
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          image: sanchitb23/msc-ticketing-payments
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  selector:
    matchLabels:
      app: payments
---
apiVersion: v1
kind: Service
metadata:
  name: payments-clusterip-srv
spec:
  selector:
    app: payments
  ports:
    - port: 3000
      targetPort: 3000
      name: payments
      protocol: TCP
