infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
  labels:
    app: tickets-depl
spec:
  replicas: 1
  template:
    metadata:
      name: tickets
      labels:
        app: tickets
    spec:
      containers:
        - name: tickets
          image: sanchitb23/msc-ticketing-tickets
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  selector:
    matchLabels:
      app: tickets
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-clusterip-srv
spec:
  selector:
    app: tickets
  ports:
    - port: 3000
      targetPort: 3000
      name: tickets
      protocol: TCP
