infra/k8s/tickets-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-mongo-depl
  labels:
    app: tickets-mongo-depl
spec:
  replicas: 1
  template:
    metadata:
      name: tickets-mongo
      labels:
        app: tickets-mongo
    spec:
      containers:
        - name: tickets-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  selector:
    matchLabels:
      app: tickets-mongo

---

apiVersion: v1
kind: Service
metadata:
  name: tickets-mongo-srv
spec:
  selector:
    app: tickets-mongo
  ports:
    - port: 27017
      targetPort: 27017
      name: tickets-db
      protocol: TCP
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: tickets-mongo-node-srv
spec:
  selector:
    app: tickets-mongo
  ports:
    - port: 27017
      protocol: TCP
      name: tickets-mongo-external
      targetPort: 27017
      nodePort: 30006
  type: NodePort
